# ukharon

./: Dockerfile  README.md  targets.yaml
crash-consensus/: conanfile.py
demo/: conanfile.py
demo/src/: CMakeLists.txt  main.cpp  sync-killer.cpp  sync-measurer.cpp
demo/src/herd/: buffer.hpp  common.hpp  connection.hpp  dynamic-connections.hpp  mica.hpp  rpc-slot.hpp
demo/src/herd/mu/: client.cpp  client.hpp  config.hpp  server.cpp  service.hpp
demo/src/herd/mukharon/: client.cpp  client.hpp  server.cpp  service.hpp
demo/src/simple/: client.cpp  common.hpp  connection.hpp  server.cpp
membership/: conanfile.py
membership/libgen/: conanfile.py
membership/libgen/src/: CMakeLists.txt  config.hpp  main.cpp  membership.h
membership/src/: CMakeLists.txt  acceptor.cpp  cache.cpp  default-config.hpp  member.cpp  membership.hpp
membership/src/benchmark/: inactivity.hpp  prctl-proxy.cpp  test-active.cpp  test-clk-sync.cpp
membership/src/internal/: controller.hpp  full-membership.hpp
membership/src/internal/controller/: config.hpp  failure-broadcaster.hpp  local-cache.hpp
membership/src/internal/controller/active-view/: cache-controller.hpp  majority-controller.hpp
membership/src/internal/controller/cache/: connections.hpp  dynamic-connections.hpp  rpc-slot.hpp
membership/src/internal/controller/full-membership/: controller.hpp  poller.hpp
membership/src/internal/controller/hb-counter/: controller.hpp  counter.hpp
membership/src/internal/controller/hb-poller/: controller.hpp  poller.hpp
membership/src/internal/controller/kernel-notification/: controller.hpp  poller.hpp
membership/src/internal/rpc/: unilateral-connection.hpp  unilateral-connector.hpp
memstore/: conanfile.py
memstore/src/internal/: announcer.hpp
paxos/: README.md  conanfile.py
paxos/src/: CMakeLists.txt  handlers.hpp  majority-reader.cpp  majority-reader.hpp  paxos.hpp  types.hpp
paxos/src/internal/: acceptor-buffer.hpp  consensus.hpp  constants.hpp  decorator.hpp  handlers.hpp  helpers.hpp  message-kind.hpp  proposer-buffer.hpp  types.hpp
paxos/src/test/: decorator-test.cpp
shared/: conanfile.py
shared/src/: logger.cpp
shared/src/internal/: logger.hpp
special/src/: heartbeat.cpp  heartbeat.hpp
tools/: conanfile.py
tools/src/: CMakeLists.txt
tools/src/hb/: README.md
tools/src/hb/fdmod/: fdmod.c  unload.sh
tools/src/hb/heartbeat/: heartbeat.c
tools/src/hb/heartbeat_bench/: README.md
tools/src/hb/heartbeat_bench/module/: Makefile  heartbeat.c  unload.sh
tools/src/hb/heartbeat_bench/userspace/: conanfile.py
tools/src/hb/heartbeat_bench/userspace/src/: CMakeLists.txt  compute.c  generate.cpp  size.h  zero.c
tools/src/rtcoredev/: Makefile  README.md  rtcore.c
tools/src/v2p/: CMakeLists.txt  v2p.cpp
ud/: conanfile.py
ud/src/: CMakeLists.txt  main.cpp
